Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="welcome-to-awp-town" class="anchor" href="#welcome-to-awp-town" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to AWP Town!</h3>
 
-<p>This map is my second big map. Why I called this AWP Town? The plan was to play on 1 ground, there should be some towers, where you can get up via ladder. I was very new to Hammer Editor and I didn't knew how to this. Today I would call myself a professionell map creator in Coutner-Strike: Global Offensive. But wait! You can update the map and add some towers? Yes, i can do that, but my mind says: Don't do that! It would completly destroy my new update and I would build everything again. </p>
+<p>This map is my second big map. Why I called this AWP Town? The plan was to play on 1 ground, there should be some towers, where you can get up via ladder. I was very new to Hammer Editor and I didn't knew how to this. Today I would call myself a professionell map creator in Coutner-Strike: Global Offensive. But wait! You can update the map and add some towers? Yes, I can do that, but my mind says: Don't do that! It would completly destroy my new update and I would build everything again. </p>
 
 <h3>
 <a id="setup-of-awp-town" class="anchor" href="#setup-of-awp-town" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setup of AWP Town</h3>
@@ -50,6 +50,8 @@ Absolutely not that far. <br><br></p></li>
 I would say so. It is something new, something diffrent. I don't want destroy the first map. Maybe there some few users, which actually like to play on this map. So, there will be a new release!<br><br></p></li>
 <li><p>How long will be AWP Town supported?<br>
 Both maps will be supported till <strong>Summer 2016</strong> <br><br></p></li>
+<li><p>Where I can download the map?
+Here, link is here: <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=394976674">http://steamcommunity.com/sharedfiles/filedetails/?id=394976674</a></p></li>
 </ul>
 
 <p>More question? Look below!<br></p>
@@ -65,6 +67,9 @@ Wanna checkout the BETA? Sign in: <a href="mailto:playsfantasy@live.de">playsfan
 
 <p>Do you have any trouble or do you have such great ideas for the new update? Tell me everything. Just Mail me at:
 <a href="mailto:playsfantasy@live.de">playsfantasy@live.de</a></p>
+
+<p>Regards,
+<strong>Sayonara &amp; Len ツ</strong></p>
         </section>
 
         <aside id="sidebar">
