Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Absolutely not that far. <br><br></p></li>
 I would say so. It is something new, something diffrent. I don't want destroy the first map. Maybe there some few users, which actually like to play on this map. So, there will be a new release!<br><br></p></li>
 <li><p>How long will be AWP Town supported?<br>
 Both maps will be supported till <strong>Summer 2016</strong> <br><br></p></li>
-<li><p>Where I can download the map?
-Here, link is here: <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=394976674">http://steamcommunity.com/sharedfiles/filedetails/?id=394976674</a></p></li>
+<li><p>Where I can download the map?<br>
+Here, link is here: <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=394976674">http://steamcommunity.com/sharedfiles/filedetails/?id=394976674</a><br><br></p></li>
 </ul>
 
 <p>More question? Look below!<br></p>
@@ -68,8 +68,8 @@ Wanna checkout the BETA? Sign in: <a href="mailto:playsfantasy@live.de">playsfan
 <p>Do you have any trouble or do you have such great ideas for the new update? Tell me everything. Just Mail me at:
 <a href="mailto:playsfantasy@live.de">playsfantasy@live.de</a></p>
 
-<p>Regards,
-<strong>Sayonara &amp; Len ツ</strong></p>
+<p>Regards,<br>
+<strong>Sayonara &amp; Len ツ</strong><br></p>
         </section>
 
         <aside id="sidebar">
